add gitignore file

--- a/hw-two-v3.ipynb
+++ b/hw-two-v3.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 2,
    "id": "2850668a",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 4,
    "id": "501ca209",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 5,
    "id": "833a5f07",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 26,
    "id": "659659e5",
    "metadata": {
     "scrolled": true
@@ -104,33 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
-   "id": "2676f418",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cria_vetor_documento(documento, vocab):\n",
-    "  vetor = []\n",
-    "\n",
-    "  for palavra in vocab:\n",
-    "    if palavra in documento:\n",
-    "        vetor.append(1)\n",
-    "    else:\n",
-    "        vetor.append(0)\n",
-    "  \n",
-    "  return np.array(vetor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 27,
    "id": "d0a79b8d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dicionario_de_contagem(vocabulario, documento):\n",
+    "def bag_of_words_to_dic(vocab, documento):\n",
     "  \n",
-    "    dic = dict.fromkeys(vocabulario, 0)\n",
+    "    dic = dict.fromkeys(vocab, 0)\n",
     "    for palavra in documento:\n",
     "        if palavra in dic:\n",
     "            dic[palavra] += 1\n",
@@ -140,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 28,
    "id": "f4e43f52",
    "metadata": {},
    "outputs": [],
@@ -159,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 29,
    "id": "1b346231",
    "metadata": {},
    "outputs": [],
@@ -169,7 +150,7 @@
     "\n",
     "for text in texts_array:\n",
     "    words = text.split()  \n",
-    "    dic = dicionario_de_contagem(Vocab, words)\n",
+    "    dic = bag_of_words_to_dic(Vocab, words)\n",
     "    e_dict_cont.append(dic)\n",
     "    calculated_tf_array.append(calculaTF(dic, words))\n",
     "    \n",
@@ -178,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 30,
    "id": "013f49b1",
    "metadata": {},
    "outputs": [],
@@ -188,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 31,
    "id": "f042dc20",
    "metadata": {},
    "outputs": [
@@ -495,7 +476,7 @@
        "[9 rows x 232 columns]"
       ]
      },
-     "execution_count": 388,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 32,
    "id": "b94f4af7",
    "metadata": {
     "scrolled": true
@@ -526,14 +507,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 43,
    "id": "5d3a7c6b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "\n",
-    "def computaIDF(lista_de_docs):\n",
+    "def getIDF(lista_de_docs):\n",
     "    idf_dic = {}\n",
     "    N = len(lista_de_docs)\n",
     "\n",
@@ -550,24 +531,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 44,
    "id": "75462c9a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "docs_idf = computaIDF(e_dict_cont)"
+    "docs_idf = getIDF(e_dict_cont)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 45,
    "id": "e48b16e3",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "def computaTFIDF(tf_bow, idfs):\n",
+    "def getTFIDF(tf_bow, idfs):\n",
     "    tfidf = {}\n",
     "\n",
     "    for palavra in tf_bow:\n",
@@ -580,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 46,
    "id": "13923a30",
    "metadata": {},
    "outputs": [],
@@ -588,12 +569,12 @@
     "tfidf_array = []\n",
     "\n",
     "for calculated_tf in calculated_tf_array:\n",
-    "    tfidf_array.append(computaTFIDF(calculated_tf, docs_idf))"
+    "    tfidf_array.append(getTFIDF(calculated_tf, docs_idf))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 47,
    "id": "07b08487",
    "metadata": {},
    "outputs": [],
@@ -609,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 48,
    "id": "b4cef104",
    "metadata": {},
    "outputs": [
@@ -916,7 +897,7 @@
        "[9 rows x 232 columns]"
       ]
      },
-     "execution_count": 395,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 49,
    "id": "f3a68b94",
    "metadata": {},
    "outputs": [
@@ -949,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 50,
    "id": "332d8f93",
    "metadata": {},
    "outputs": [
@@ -1229,7 +1210,7 @@
        "[8 rows x 232 columns]"
       ]
      },
-     "execution_count": 397,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 21,
    "id": "6b685503",
    "metadata": {},
    "outputs": [
@@ -1250,7 +1231,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 398,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1273,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 22,
    "id": "557e700e",
    "metadata": {},
    "outputs": [],
